--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+
 
 # testing
 /coverage
@@ -21,3 +18,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# only ignore the node_modules file in the current directory
+/node_modules
