--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "reactstrap": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
